[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/images/viruses/bossVirus_Rainbow.png" type="Texture" id=1]
[ext_resource path="res://scripts/viruses/bosses/rainbowVirus.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/laser.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/rainbowVirusAmbient.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/rainbowVirusDamage.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/images/viruses/bossVirus_RainbowGlow.png" type="Texture" id=6]
[ext_resource path="res://scenes/viruses/bosses/rainbowVirusShader.tres" type="Material" id=7]
[ext_resource path="res://assets/sounds/beamRiser.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/rainbowBulletRelease.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/bossExploding.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/rainbowVirusDeath.wav" type="AudioStream" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 211.0

[sub_resource type="CircleShape2D" id=2]
radius = 232.009

[sub_resource type="Animation" id=3]
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1, 1.2, 2.6, 2.7, 2.8, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 72.0, 100.0, 60.0, 172.864, 120.0, 256.0, 360.0 ]
}

[sub_resource type="Animation" id=5]
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/Sprite:material:shader_param/Shift_Hue")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/glow:material:shader_param/Shift_Hue")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.6, 0.6, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="rainbowVirus" type="KinematicBody2D" groups=[
"boss",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"virus",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D"]
material = ExtResource( 7 )
texture = ExtResource( 1 )

[node name="glow" type="Sprite" parent="Area2D"]
modulate = Color( 1, 1, 1, 0 )
material = ExtResource( 7 )
texture = ExtResource( 6 )

[node name="moving" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 3 )
anims/death = SubResource( 4 )

[node name="effects" type="AnimationPlayer" parent="."]
autoplay = "rainbow"
anims/rainbow = SubResource( 5 )

[node name="damage" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 6 )

[node name="ambient" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
autoplay = true

[node name="damageS" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="shootingS" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="beamingRiser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0

[node name="releasingBullets" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0

[node name="exploding" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0

[node name="deathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="shooting" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="movementTween" type="Tween" parent="."]

[node name="rammingTween" type="Tween" parent="."]

[node name="deathTween" type="Tween" parent="."]

[node name="glowIntense" type="Tween" parent="."]

[node name="intensifySpeed" type="Tween" parent="."]

[node name="intensifySpeed2" type="Tween" parent="."]

[node name="intensifySound" type="Tween" parent="."]

[node name="intensifySound2" type="Tween" parent="."]

[node name="intensifyBeamingSound" type="Tween" parent="."]

[node name="intensifyBeamingSound2" type="Tween" parent="."]

[node name="damageCooldown" type="Timer" parent="."]
wait_time = 0.1

[node name="shootingCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="beamingTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="deathDuration" type="Timer" parent="."]
wait_time = 0.1

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="shooting" to="." method="_on_shooting_timeout"]
[connection signal="tween_all_completed" from="movementTween" to="." method="_on_movementTween_tween_all_completed"]
[connection signal="tween_all_completed" from="rammingTween" to="." method="_on_rammingTween_tween_all_completed"]
[connection signal="tween_all_completed" from="deathTween" to="." method="_on_deathTween_tween_all_completed"]
[connection signal="tween_all_completed" from="intensifyBeamingSound" to="." method="_on_intensifyBeamingSound_tween_all_completed"]
[connection signal="tween_all_completed" from="intensifyBeamingSound2" to="." method="_on_intensifyBeamingSound_tween_all_completed"]
[connection signal="timeout" from="damageCooldown" to="." method="_on_damageCooldown_timeout"]
[connection signal="timeout" from="shootingCooldown" to="." method="_on_shootingCooldown_timeout"]
[connection signal="timeout" from="beamingTimer" to="." method="_on_beamingTimer_timeout"]
[connection signal="timeout" from="deathDuration" to="." method="_on_deathDuration_timeout"]
